--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "parcauto",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hajatianahanitra/parcauto.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Hajatiana",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/hajatianahanitra/parcauto/issues"
@@ -19,5 +19,7 @@
   "homepage": "https://github.com/hajatianahanitra/parcauto#readme",
   "dependencies": {
     "express": "^4.15.4"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
